--- a/app/src/main/res/layout/beer_detail.xml
+++ b/app/src/main/res/layout/beer_detail.xml
@@ -35,12 +35,11 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- TODO: text word wraps -->
         <TextView
             android:id="@+id/detail_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="fhjlskbjhqanjkcbkjasnKLfjkSDnfkASJhghweialbgyuwasjkvhweiofhlwesejkfweajfhalfhjlskbjhqanjkcbkjasnKLfjk"
+            android:text="@string/detail_description"
             android:layout_margin="5dp"
 
             app:layout_constraintLeft_toRightOf="@id/detailImage"
