--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="viewModel" type="dani.kotlin.data.DetailViewModel"/>
+        <variable name="viewModel" type="dani.kotlin.data.model.BeerViewModel"/>
     </data>
 
     <ScrollView
